fix footer alignment

--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,9 @@ body {
   padding: 0;
   margin: 0;
   font-size: 1.25rem;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .content,
@@ -45,6 +48,7 @@ main {
   max-width: 600px;
   margin: 0 auto;
   padding: 0 1rem;
+  flex: auto;
 }
 
 :any-link {
